# clifoundry

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  index.html
src/clifoundry/: main.py
src/clifoundry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clifoundry/commands/: generate.py  health.py  hello.py  info.py
src/clifoundry/core/: config.py  logging.py
tests/: test_health.py
