[project]
name = "clifoundry"
version = "0.1.0"
description = "Docker-first, dynamic, team-ready Python CLI starter template"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "CLIFoundry Contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "pre-commit>=3.0.0",
]

[project.scripts]
clifoundry = "clifoundry.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"